Fix spacing of some elements within form

--- a/src/styles.css
+++ b/src/styles.css
@@ -4,6 +4,7 @@ body {
     /* justify-content: center; */
     margin: 0px;
     margin-top: 15px;
+    /* overflow: auto; */
 }
 
 p {
@@ -74,7 +75,7 @@ input, select {
     position: absolute;
     /* right: 0px; */
     width: fit-content;
-    height: 230px;
+    height: 240px;
     border-right: 0px solid white;
     border-top-right-radius: 0px;
     border-bottom-right-radius: 0px;
@@ -95,12 +96,17 @@ input, select {
     left: 6px;
 }
 
-/* #description {
+#description {
     height: 50px;
-} */
+}
     
+#formduedate {
+    margin-top: 50px;
+}
 
-
+#divsubmit {
+    margin-bottom: 100px;
+}
 
 #formsubmit {
     position: relative;
@@ -247,9 +253,11 @@ input, select {
     right: 5px;
 }
 
-.priority {
-    right: 5px;
-    bottom: 5px;
+#priority {
+    /* right: 5px;
+    bottom: 5px; */
+    width: 60px;
+    background-color: white;
 }
 
 .Low {
